change visited/active link color in help panel, remove chapter numbers

--- a/data/resources/help/latex2e_0.html
+++ b/data/resources/help/latex2e_0.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 body { margin: 1em; margin-top: 0px; padding-top: 1px; }
 h1 { text-align: left; }
 a.summary-letter {text-decoration: none}
+a:visited {color: #00e}
+a:active {color: #000}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
 blockquote.smallquotation {font-size: smaller}
@@ -95,7 +97,6 @@ span.sansserif {font-family: sans-serif; font-weight: normal}
 
 <div class="contents">
 
-<ul class="no-bullet">
 <p><a name="toc-Overview-of-LaTeX" href="latex2e_2.html#Overview">Overview of LaTeX</a><br> Starting and ending, Output files, TeX engines, LaTeX command syntax, Environment, CTAN: the Comprehensive TeX Archive Network</p>
 
 <p><a name="toc-Document-classes-1" href="latex2e_3.html#Document-classes">Document classes</a><br> Document class options, Additional packages, Class and package construction</p>
@@ -151,7 +152,6 @@ span.sansserif {font-family: sans-serif; font-weight: normal}
 <p><a name="toc-Command-line-1" href="latex2e_28.html#Command-line">Command line</a><br> Command line options, Command line input, Recovering from errors</p>
 
 <p><a name="toc-Document-templates-1" href="latex2e_29.html#Document-templates">Appendix: Document templates</a><br> <code>beamer</code>, <code>article</code>, <code>book</code>, ...</li>
-</ul>
 </div>
 
 
