--- a/data/resources/help/latex2e_1.html
+++ b/data/resources/help/latex2e_1.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="About-this-document" class="anchor"></a>
 <a name="About-this-document-1" class="anchor"></a>
-<h2 class="chapter">1 About this document</h2>
+<h2 class="chapter">About this document</h2>
 
 <a name="index-home-page-for-manual" class="anchor"></a>
 <p>This is an unofficial reference manual for the LaTeX2e document
