--- a/data/resources/help/latex2e_11.html
+++ b/data/resources/help/latex2e_11.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Footnotes" class="anchor"></a>
 <a name="Footnotes-1" class="anchor"></a>
-<h2 class="chapter">11 Footnotes</h2>
+<h2 class="chapter">Footnotes</h2>
 
 <a name="index-footnotes_002c-creating" class="anchor"></a>
 
@@ -116,7 +118,7 @@ include a bibliographic style with that behavior (see <a href="latex2e_8.html#Us
 <hr>
 <a name="g_t_005cfootnote" class="anchor"></a>
 <a name="g_t_005cfootnote-1" class="anchor"></a>
-<h3 class="section">11.1 <code>\footnote</code></h3>
+<h3 class="section"><code>\footnote</code></h3>
 
 <a name="index-_005cfootnote" class="anchor"></a>
 
@@ -208,7 +210,7 @@ shown alphabetically. See <a href="latex2e_8.html#minipage">minipage</a> and <a 
 <hr>
 <a name="g_t_005cfootnotemark" class="anchor"></a>
 <a name="g_t_005cfootnotemark-1" class="anchor"></a>
-<h3 class="section">11.2 <code>\footnotemark</code></h3>
+<h3 class="section"><code>\footnotemark</code></h3>
 
 <a name="index-_005cfootnotemark" class="anchor"></a>
 
@@ -289,7 +291,7 @@ But the key lemma is from Tinker.\cref{fn:TE}
 <hr>
 <a name="g_t_005cfootnotetext" class="anchor"></a>
 <a name="g_t_005cfootnotetext-1" class="anchor"></a>
-<h3 class="section">11.3 <code>\footnotetext</code></h3>
+<h3 class="section"><code>\footnotetext</code></h3>
 
 <a name="index-_005cfootnotetext" class="anchor"></a>
 
@@ -313,7 +315,7 @@ examples.
 <hr>
 <a name="Footnotes-in-section-headings" class="anchor"></a>
 <a name="Footnotes-in-section-headings-1" class="anchor"></a>
-<h3 class="section">11.4 Footnotes in section headings</h3>
+<h3 class="section">Footnotes in section headings</h3>
 
 <a name="index-footnote_002c-in-section-headings" class="anchor"></a>
 <a name="index-table-of-contents_002c-avoiding-footnotes" class="anchor"></a>
@@ -342,7 +344,7 @@ what gets moved to the table of contents is the optional argument.
 <hr>
 <a name="Footnotes-in-a-table" class="anchor"></a>
 <a name="Footnotes-in-a-table-1" class="anchor"></a>
-<h3 class="section">11.5 Footnotes in a table</h3>
+<h3 class="section">Footnotes in a table</h3>
 
 <a name="index-footnote_002c-in-a-table" class="anchor"></a>
 
@@ -423,7 +425,7 @@ other footnotes.
 <hr>
 <a name="Footnotes-of-footnotes" class="anchor"></a>
 <a name="Footnotes-of-footnotes-1" class="anchor"></a>
-<h3 class="section">11.6 Footnotes of footnotes</h3>
+<h3 class="section">Footnotes of footnotes</h3>
 
 <a name="index-footnote_002c-of-a-footnote" class="anchor"></a>
 
