--- a/data/resources/help/latex2e_13.html
+++ b/data/resources/help/latex2e_13.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Counters" class="anchor"></a>
 <a name="Counters-1" class="anchor"></a>
-<h2 class="chapter">13 Counters</h2>
+<h2 class="chapter">Counters</h2>
 
 <a name="index-counters_002c-a-list-of" class="anchor"></a>
 <a name="index-variables_002c-a-list-of" class="anchor"></a>
@@ -126,7 +128,7 @@ up to four levels of nesting (see <a href="latex2e_8.html#enumerate">enumerate</
 <hr>
 <a name="g_t_005calph-_005cAlph-_005carabic-_005croman-_005cRoman-_005cfnsymbol" class="anchor"></a>
 <a name="g_t_005calph-_005cAlph-_005carabic-_005croman-_005cRoman-_005cfnsymbol_003a-Printing-counters" class="anchor"></a>
-<h3 class="section">13.1 <code>\alph \Alph \arabic \roman \Roman \fnsymbol</code>: Printing counters</h3>
+<h3 class="section"><code>\alph \Alph \arabic \roman \Roman \fnsymbol</code>: Printing counters</h3>
 
 <a name="index-counters_002c-printing" class="anchor"></a>
 
@@ -210,7 +212,7 @@ warning but LaTeX does not output anything.
 <hr>
 <a name="g_t_005cusecounter" class="anchor"></a>
 <a name="g_t_005cusecounter-1" class="anchor"></a>
-<h3 class="section">13.2 <code>\usecounter</code></h3>
+<h3 class="section"><code>\usecounter</code></h3>
 
 <a name="index-_005cusecounter" class="anchor"></a>
 <a name="index-list-items_002c-specifying-counter" class="anchor"></a>
@@ -248,7 +250,7 @@ enumerated with <var>testcounter</var>:
 <hr>
 <a name="g_t_005cvalue" class="anchor"></a>
 <a name="g_t_005cvalue-1" class="anchor"></a>
-<h3 class="section">13.3 <code>\value</code></h3>
+<h3 class="section"><code>\value</code></h3>
 
 <a name="index-_005cvalue" class="anchor"></a>
 <a name="index-counters_002c-getting-value-of" class="anchor"></a>
@@ -293,7 +295,7 @@ preceded by <code>\protect</code> (see <a href="latex2e_12.html#g_t_005cprotect"
 <hr>
 <a name="g_t_005csetcounter" class="anchor"></a>
 <a name="g_t_005csetcounter-1" class="anchor"></a>
-<h3 class="section">13.4 <code>\setcounter</code></h3>
+<h3 class="section"><code>\setcounter</code></h3>
 
 <a name="index-_005csetcounter" class="anchor"></a>
 <a name="index-counters_002c-setting" class="anchor"></a>
@@ -322,7 +324,7 @@ Here it is in Roman: \Roman{exercise}.
 <hr>
 <a name="g_t_005caddtocounter" class="anchor"></a>
 <a name="g_t_005caddtocounter-1" class="anchor"></a>
-<h3 class="section">13.5 <code>\addtocounter</code></h3>
+<h3 class="section"><code>\addtocounter</code></h3>
 
 <a name="index-_005caddtocounter" class="anchor"></a>
 
@@ -346,7 +348,7 @@ Here it is in Roman: \Roman{section}.
 <hr>
 <a name="g_t_005crefstepcounter" class="anchor"></a>
 <a name="g_t_005crefstepcounter-1" class="anchor"></a>
-<h3 class="section">13.6 <code>\refstepcounter</code></h3>
+<h3 class="section"><code>\refstepcounter</code></h3>
 
 <a name="index-_005crefstepcounter" class="anchor"></a>
 
@@ -371,7 +373,7 @@ locally, i.e., inside the current group.
 <hr>
 <a name="g_t_005cstepcounter" class="anchor"></a>
 <a name="g_t_005cstepcounter-1" class="anchor"></a>
-<h3 class="section">13.7 <code>\stepcounter</code></h3>
+<h3 class="section"><code>\stepcounter</code></h3>
 
 <a name="index-_005cstepcounter" class="anchor"></a>
 
@@ -394,7 +396,7 @@ not influence references&nbsp;&mdash; it does not define the current
 <hr>
 <a name="g_t_005cday-_0026-_005cmonth-_0026-_005cyear" class="anchor"></a>
 <a name="g_t_005cday-_0026-_005cmonth-_0026-_005cyear-1" class="anchor"></a>
-<h3 class="section">13.8 <code>\day</code> &amp; <code>\month</code> &amp; <code>\year</code></h3>
+<h3 class="section"><code>\day</code> &amp; <code>\month</code> &amp; <code>\year</code></h3>
 
 <a name="index-_005cday" class="anchor"></a>
 <a name="index-_005cmonth" class="anchor"></a>
