--- a/data/resources/help/latex2e_15.html
+++ b/data/resources/help/latex2e_15.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Making-paragraphs" class="anchor"></a>
 <a name="Making-paragraphs-1" class="anchor"></a>
-<h2 class="chapter">15 Making paragraphs</h2>
+<h2 class="chapter">Making paragraphs</h2>
 
 <a name="index-making-paragraphs" class="anchor"></a>
 <a name="index-paragraphs" class="anchor"></a>
@@ -146,7 +148,7 @@ complete</samp>&rsquo;.
 <hr>
 <a name="g_t_005cpar" class="anchor"></a>
 <a name="g_t_005cpar-1" class="anchor"></a>
-<h3 class="section">15.1 <code>\par</code></h3>
+<h3 class="section"><code>\par</code></h3>
 
 <a name="index-_005cpar" class="anchor"></a>
 <a name="index-paragraph_002c-ending" class="anchor"></a>
@@ -209,7 +211,7 @@ there is an empty horizontal space of 3&nbsp;inches and then
 <hr>
 <a name="g_t_005cindent-_0026-_005cnoindent" class="anchor"></a>
 <a name="g_t_005cindent-_0026-_005cnoindent-1" class="anchor"></a>
-<h3 class="section">15.2 <code>\indent</code> &amp; <code>\noindent</code></h3>
+<h3 class="section"><code>\indent</code> &amp; <code>\noindent</code></h3>
 
 <a name="index-_005cindent" class="anchor"></a>
 <a name="index-_005cnoindent" class="anchor"></a>
@@ -277,7 +279,7 @@ look on CTAN for the package <code>indentfirst</code>.
 <hr>
 <a name="g_t_005cparindent-_0026-_005cparskip" class="anchor"></a>
 <a name="g_t_005cparindent-_0026-_005cparskip-1" class="anchor"></a>
-<h3 class="section">15.3 <code>\parindent</code> &amp; <code>\parskip</code></h3>
+<h3 class="section"><code>\parindent</code> &amp; <code>\parskip</code></h3>
 
 <a name="index-_005cparindent-2" class="anchor"></a>
 <a name="index-_005cparskip" class="anchor"></a>
@@ -317,7 +319,7 @@ value for <code>\parskip</code> in LaTeX&rsquo;s standard document styles is
 <hr>
 <a name="Marginal-notes" class="anchor"></a>
 <a name="Marginal-notes-1" class="anchor"></a>
-<h3 class="section">15.4 Marginal notes</h3>
+<h3 class="section">Marginal notes</h3>
 
 <a name="index-marginal-notes" class="anchor"></a>
 <a name="index-notes-in-the-margin" class="anchor"></a>
