--- a/data/resources/help/latex2e_16.html
+++ b/data/resources/help/latex2e_16.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Math-formulas" class="anchor"></a>
 <a name="Math-formulas-1" class="anchor"></a>
-<h2 class="chapter">16 Math formulas</h2>
+<h2 class="chapter">Math formulas</h2>
 
 <a name="index-math-formulas" class="anchor"></a>
 <a name="index-formulas_002c-math" class="anchor"></a>
@@ -219,7 +221,7 @@ see their documentation on CTAN.
 <hr>
 <a name="Subscripts-_0026-superscripts" class="anchor"></a>
 <a name="Subscripts-_0026-superscripts-1" class="anchor"></a>
-<h3 class="section">16.1 Subscripts &amp; superscripts</h3>
+<h3 class="section">Subscripts &amp; superscripts</h3>
 
 <a name="index-superscript" class="anchor"></a>
 <a name="index-subscript" class="anchor"></a>
@@ -305,7 +307,7 @@ typeset chemical formulas.  There are packages for that such as
 <hr>
 <a name="Math-symbols" class="anchor"></a>
 <a name="Math-symbols-1" class="anchor"></a>
-<h3 class="section">16.2 Math symbols</h3>
+<h3 class="section">Math symbols</h3>
 
 <a name="index-math-symbols" class="anchor"></a>
 <a name="index-symbols_002c-math" class="anchor"></a>
@@ -1889,7 +1891,7 @@ provides versions to use in mathematical text.
 <hr>
 <a name="Blackboard-bold" class="anchor"></a>
 <a name="Blackboard-bold-1" class="anchor"></a>
-<h4 class="subsection">16.2.1 Blackboard bold</h4>
+<h4 class="subsection">Blackboard bold</h4>
 
 <a name="index-blackboard-bold" class="anchor"></a>
 <a name="index-doublestruck" class="anchor"></a>
@@ -1925,7 +1927,7 @@ capital letters; look on CTAN.
 <hr>
 <a name="Calligraphic" class="anchor"></a>
 <a name="Calligraphic-1" class="anchor"></a>
-<h4 class="subsection">16.2.2 Calligraphic</h4>
+<h4 class="subsection">Calligraphic</h4>
 
 <a name="index-calligraphic-fonts" class="anchor"></a>
 <a name="index-script-fonts" class="anchor"></a>
@@ -1954,7 +1956,7 @@ an error.  Instead you get unexpected output.  For instance,
 <hr>
 <a name="g_t_005cboldmath-_0026-_005cunboldmath" class="anchor"></a>
 <a name="g_t_005cboldmath-_0026-_005cunboldmath-1" class="anchor"></a>
-<h4 class="subsection">16.2.3 <code>\boldmath</code> &amp; <code>\unboldmath</code></h4>
+<h4 class="subsection"><code>\boldmath</code> &amp; <code>\unboldmath</code></h4>
 
 <a name="index-boldface-mathematics" class="anchor"></a>
 <a name="index-symbols_002c-boldface" class="anchor"></a>
@@ -2018,7 +2020,7 @@ we have $\bm{v} = 5\cdot\bm{u}$
 <hr>
 <a name="Dots" class="anchor"></a>
 <a name="Dots_002c-horizontal-or-vertical" class="anchor"></a>
-<h4 class="subsection">16.2.4 Dots, horizontal or vertical</h4>
+<h4 class="subsection">Dots, horizontal or vertical</h4>
 
 <a name="index-ellipses" class="anchor"></a>
 <a name="index-dots" class="anchor"></a>
@@ -2106,7 +2108,7 @@ or relation symbol, <code>\dotsi</code> for dots with integrals, or
 <hr>
 <a name="Math-functions" class="anchor"></a>
 <a name="Math-functions-1" class="anchor"></a>
-<h3 class="section">16.3 Math functions</h3>
+<h3 class="section">Math functions</h3>
 
 <a name="index-math-functions" class="anchor"></a>
 <a name="index-functions_002c-math" class="anchor"></a>
@@ -2336,7 +2338,7 @@ below, as is traditional with <code>\lim</code>, <code>\sup</code>, or <code>\ma
 <hr>
 <a name="Math-accents" class="anchor"></a>
 <a name="Math-accents-1" class="anchor"></a>
-<h3 class="section">16.4 Math accents</h3>
+<h3 class="section">Math accents</h3>
 
 <a name="index-math-accents" class="anchor"></a>
 <a name="index-accents_002c-mathematical" class="anchor"></a>
@@ -2449,7 +2451,7 @@ one without a dot, <code>\imath</code> or <code>jmath</code> (see <a href="#Math
 <hr>
 <a name="Over_002d-and-Underlining" class="anchor"></a>
 <a name="Over_002d-and-Underlining-1" class="anchor"></a>
-<h3 class="section">16.5 Over- and Underlining</h3>
+<h3 class="section">Over- and Underlining</h3>
 
 <a name="index-overlining" class="anchor"></a>
 <a name="index-underlining" class="anchor"></a>
@@ -2522,7 +2524,7 @@ some improvements on the braces.  See the documentation on CTAN.
 <hr>
 <a name="Spacing-in-math-mode" class="anchor"></a>
 <a name="Spacing-in-math-mode-1" class="anchor"></a>
-<h3 class="section">16.6 Spacing in math mode</h3>
+<h3 class="section">Spacing in math mode</h3>
 
 <a name="index-spacing-within-math-mode" class="anchor"></a>
 <a name="index-math-mode_002c-spacing" class="anchor"></a>
@@ -2613,7 +2615,7 @@ both text and math mode.
 <hr>
 <a name="g_t_005csmash" class="anchor"></a>
 <a name="g_t_005csmash-1" class="anchor"></a>
-<h4 class="subsection">16.6.1 <code>\smash</code></h4>
+<h4 class="subsection"><code>\smash</code></h4>
 
 <a name="index-vertical-spacing_002c-math-mode" class="anchor"></a>
 <a name="index-math-mode_002c-vertical-space" class="anchor"></a>
@@ -2692,7 +2694,7 @@ control over smashing a subformula box.
 <hr>
 <a name="g_t_005cphantom-_0026-_005cvphantom-_0026-_005chphantom" class="anchor"></a>
 <a name="g_t_005cphantom-_0026-_005cvphantom-_0026-_005chphantom-1" class="anchor"></a>
-<h4 class="subsection">16.6.2 <code>\phantom</code> &amp; <code>\vphantom</code> &amp; <code>\hphantom</code></h4>
+<h4 class="subsection"><code>\phantom</code> &amp; <code>\vphantom</code> &amp; <code>\hphantom</code></h4>
 
 <a name="index-spacing_002c-math-mode" class="anchor"></a>
 <a name="index-horizontal-spacing" class="anchor"></a>
@@ -2769,7 +2771,7 @@ with <code>\leavevmode</code>.
 <hr>
 <a name="Math-miscellany" class="anchor"></a>
 <a name="Math-miscellany-1" class="anchor"></a>
-<h3 class="section">16.7 Math miscellany</h3>
+<h3 class="section">Math miscellany</h3>
 
 <a name="index-math-miscellany" class="anchor"></a>
 
@@ -2781,7 +2783,7 @@ some that don&rsquo;t fit into other categories.
 <hr>
 <a name="Colon-character-_0026-_005ccolon" class="anchor"></a>
 <a name="Colon-character-_003a-_0026-_005ccolon" class="anchor"></a>
-<h4 class="subsection">16.7.1 Colon character <code>:</code> &amp; <code>\colon</code></h4>
+<h4 class="subsection">Colon character <code>:</code> &amp; <code>\colon</code></h4>
 
 <a name="index-_003a" class="anchor"></a>
 <a name="index-colon-character" class="anchor"></a>
@@ -2819,7 +2821,7 @@ the colon character as a punctuation then use <code>\mathpunct{:}</code>.
 <hr>
 <a name="g_t_005c_002a" class="anchor"></a>
 <a name="g_t_005c_002a-1" class="anchor"></a>
-<h4 class="subsection">16.7.2 <code>\*</code></h4>
+<h4 class="subsection"><code>\*</code></h4>
 
 <a name="index-multiplication_002c-discretionary" class="anchor"></a>
 <a name="index-breaks_002c-multiplication-discretionary" class="anchor"></a>
@@ -2847,7 +2849,7 @@ break, followed by <code>\( A_3 A_4 \)</code>.
 <hr>
 <a name="g_t_005cfrac" class="anchor"></a>
 <a name="g_t_005cfrac-1" class="anchor"></a>
-<h4 class="subsection">16.7.3 <code>\frac</code></h4>
+<h4 class="subsection"><code>\frac</code></h4>
 
 <a name="index-fraction" class="anchor"></a>
 <a name="index-_005cfrac" class="anchor"></a>
@@ -2867,7 +2869,7 @@ mode it comes out small; see the discussion of <code>\displaystyle</code>
 <hr>
 <a name="g_t_005cleft-_0026-_005cright" class="anchor"></a>
 <a name="g_t_005cleft-_0026-_005cright-1" class="anchor"></a>
-<h4 class="subsection">16.7.4 <code>\left</code> &amp; <code>\right</code></h4>
+<h4 class="subsection"><code>\left</code> &amp; <code>\right</code></h4>
 
 <a name="index-delimiters_002c-paired" class="anchor"></a>
 <a name="index-paired-delimiters" class="anchor"></a>
@@ -2919,7 +2921,7 @@ backslash, <code>\{</code>.
 <hr>
 <a name="g_t_005csqrt" class="anchor"></a>
 <a name="g_t_005csqrt-1" class="anchor"></a>
-<h4 class="subsection">16.7.5 <code>\sqrt</code></h4>
+<h4 class="subsection"><code>\sqrt</code></h4>
 
 <a name="index-square-root" class="anchor"></a>
 <a name="index-roots" class="anchor"></a>
@@ -2946,7 +2948,7 @@ a large enough <code>arg</code>, it is vertical).
 <hr>
 <a name="g_t_005cstackrel" class="anchor"></a>
 <a name="g_t_005cstackrel-1" class="anchor"></a>
-<h4 class="subsection">16.7.6 <code>\stackrel</code></h4>
+<h4 class="subsection"><code>\stackrel</code></h4>
 
 <a name="index-stack-math" class="anchor"></a>
 <a name="index-relation_002c-text-above" class="anchor"></a>
