--- a/data/resources/help/latex2e_17.html
+++ b/data/resources/help/latex2e_17.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Modes" class="anchor"></a>
 <a name="Modes-1" class="anchor"></a>
-<h2 class="chapter">17 Modes</h2>
+<h2 class="chapter">Modes</h2>
 
 <a name="index-modes" class="anchor"></a>
 
@@ -157,7 +159,7 @@ situation, where it can put page breaks, is <em>outer paragraph mode</em>
 <hr>
 <a name="g_t_005censuremath" class="anchor"></a>
 <a name="g_t_005censuremath-1" class="anchor"></a>
-<h3 class="section">17.1 <code>\ensuremath</code></h3>
+<h3 class="section"><code>\ensuremath</code></h3>
 
 <p>Synopsis:
 </p>
