--- a/data/resources/help/latex2e_18.html
+++ b/data/resources/help/latex2e_18.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Page-styles" class="anchor"></a>
 <a name="Page-styles-1" class="anchor"></a>
-<h2 class="chapter">18 Page styles</h2>
+<h2 class="chapter">Page styles</h2>
 
 <a name="index-styles_002c-page" class="anchor"></a>
 <a name="index-page-styles" class="anchor"></a>
@@ -110,7 +112,7 @@ styles.  See its documentation on CTAN.
 <hr>
 <a name="g_t_005cmaketitle" class="anchor"></a>
 <a name="g_t_005cmaketitle-1" class="anchor"></a>
-<h3 class="section">18.1 <code>\maketitle</code></h3>
+<h3 class="section"><code>\maketitle</code></h3>
 
 <a name="index-titles_002c-making" class="anchor"></a>
 <a name="index-_005cmaketitle" class="anchor"></a>
@@ -215,7 +217,7 @@ house requirements.)
 <hr>
 <a name="g_t_005cpagenumbering" class="anchor"></a>
 <a name="g_t_005cpagenumbering-1" class="anchor"></a>
-<h3 class="section">18.2 <code>\pagenumbering</code></h3>
+<h3 class="section"><code>\pagenumbering</code></h3>
 
 <a name="index-_005cpagenumbering" class="anchor"></a>
 <a name="index-page-numbering-style" class="anchor"></a>
@@ -293,7 +295,7 @@ number then you will manipulate the <code>page</code> counter
 <hr>
 <a name="g_t_005cpagestyle" class="anchor"></a>
 <a name="g_t_005cpagestyle-1" class="anchor"></a>
-<h3 class="section">18.3 <code>\pagestyle</code></h3>
+<h3 class="section"><code>\pagestyle</code></h3>
 
 <a name="index-_005cpagestyle" class="anchor"></a>
 <a name="index-header-style" class="anchor"></a>
@@ -410,7 +412,7 @@ the last one that came before that page.
 <hr>
 <a name="g_t_005cthispagestyle" class="anchor"></a>
 <a name="g_t_005cthispagestyle-1" class="anchor"></a>
-<h3 class="section">18.4 <code>\thispagestyle</code></h3>
+<h3 class="section"><code>\thispagestyle</code></h3>
 
 <a name="index-_005cthispagestyle" class="anchor"></a>
 <a name="index-page-style_002c-this-page" class="anchor"></a>
