--- a/data/resources/help/latex2e_19.html
+++ b/data/resources/help/latex2e_19.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Spaces" class="anchor"></a>
 <a name="Spaces-1" class="anchor"></a>
-<h2 class="chapter">19 Spaces</h2>
+<h2 class="chapter">Spaces</h2>
 
 <a name="index-spaces" class="anchor"></a>
 <a name="index-white-space" class="anchor"></a>
@@ -103,7 +105,7 @@ chapter.
 <hr>
 <a name="g_t_005censpace-_0026-_005cquad-_0026-_005cqquad" class="anchor"></a>
 <a name="g_t_005censpace-_0026-_005cquad-_0026-_005cqquad-1" class="anchor"></a>
-<h3 class="section">19.1 <code>\enspace</code> &amp; <code>\quad</code> &amp; <code>\qquad</code></h3>
+<h3 class="section"><code>\enspace</code> &amp; <code>\quad</code> &amp; <code>\qquad</code></h3>
 
 <a name="index-_005censpace" class="anchor"></a>
 <a name="index-_005cquad-1" class="anchor"></a>
@@ -141,7 +143,7 @@ in many circumstances than arbitrary lengths, such as you get with
 <hr>
 <a name="g_t_005chspace" class="anchor"></a>
 <a name="g_t_005chspace-1" class="anchor"></a>
-<h3 class="section">19.2 <code>\hspace</code></h3>
+<h3 class="section"><code>\hspace</code></h3>
 
 <a name="index-_005chspace" class="anchor"></a>
 
@@ -201,7 +203,7 @@ space won&rsquo;t shrink more than 0.25cm (see <a href="latex2e_14.html#Lengths"
 <hr>
 <a name="g_t_005chfill" class="anchor"></a>
 <a name="g_t_005chfill-1" class="anchor"></a>
-<h3 class="section">19.3 <code>\hfill</code></h3>
+<h3 class="section"><code>\hfill</code></h3>
 
 <a name="index-_005chfill" class="anchor"></a>
 
@@ -249,7 +251,7 @@ so the space can be discarded at line breaks.  To avoid that instead use
 <hr>
 <a name="g_t_005chss" class="anchor"></a>
 <a name="g_t_005chss-1" class="anchor"></a>
-<h3 class="section">19.4 <code>\hss</code></h3>
+<h3 class="section"><code>\hss</code></h3>
 
 <a name="index-_005chss" class="anchor"></a>
 <a name="index-horizontal-space" class="anchor"></a>
@@ -283,7 +285,7 @@ X\hbox to 0pt{\hss Z}Y
 <hr>
 <a name="g_t_005cspacefactor" class="anchor"></a>
 <a name="g_t_005cspacefactor-1" class="anchor"></a>
-<h3 class="section">19.5 <code>\spacefactor</code></h3>
+<h3 class="section"><code>\spacefactor</code></h3>
 
 <p>Synopsis:
 </p>
@@ -353,7 +355,7 @@ See <a href="latex2e_12.html#g_t_005cmakeatletter-_0026-_005cmakeatother">\makea
 <hr>
 <a name="g_t_005c_0040" class="anchor"></a>
 <a name="g_t_005c_0040-1" class="anchor"></a>
-<h4 class="subsection">19.5.1 <code>\@</code></h4>
+<h4 class="subsection"><code>\@</code></h4>
 
 <a name="index-_005c_0040" class="anchor"></a>
 <a name="index-at_002dsign" class="anchor"></a>
@@ -416,7 +418,7 @@ Examples are <code>Nat.\ Acad.\ Science</code>, and <code>Mr.~Bean</code>, and
 <hr>
 <a name="g_t_005cfrenchspacing" class="anchor"></a>
 <a name="g_t_005cfrenchspacing-1" class="anchor"></a>
-<h4 class="subsection">19.5.2 <code>\frenchspacing</code></h4>
+<h4 class="subsection"><code>\frenchspacing</code></h4>
 
 <a name="index-_005cfrenchspacing" class="anchor"></a>
 <a name="index-_005cnonfrenchspacing" class="anchor"></a>
@@ -445,7 +447,7 @@ spaces are treated equally.
 <hr>
 <a name="g_t_005cnormalsfcodes" class="anchor"></a>
 <a name="g_t_005cnormalsfcodes-1" class="anchor"></a>
-<h4 class="subsection">19.5.3 <code>\normalsfcodes</code></h4>
+<h4 class="subsection"><code>\normalsfcodes</code></h4>
 
 <a name="index-_005cnormalsfcodes" class="anchor"></a>
 <a name="index-spacing_002c-inter_002dsentence-1" class="anchor"></a>
@@ -463,7 +465,7 @@ spaces are treated equally.
 <hr>
 <a name="g_t_005c_0028SPACE_0029" class="anchor"></a>
 <a name="Backslash_002dspace_002c-_005c-" class="anchor"></a>
-<h3 class="section">19.6 Backslash-space, <code>\ </code></h3>
+<h3 class="section">Backslash-space, <code>\ </code></h3>
 
 <a name="index-_005cNEWLINE" class="anchor"></a>
 <a name="index-_005cSPACE" class="anchor"></a>
@@ -516,7 +518,7 @@ are equivalent to backslash-space, <code>\ </code>.
 <hr>
 <a name="g_t_007e" class="anchor"></a>
 <a name="g_t_007e-1" class="anchor"></a>
-<h3 class="section">19.7 <code>~</code></h3>
+<h3 class="section"><code>~</code></h3>
 
 <a name="index-_007e" class="anchor"></a>
 <a name="index-tie" class="anchor"></a>
@@ -593,7 +595,7 @@ said~--- plausible</code>.
 <hr>
 <a name="g_t_005cthinspace-_0026-_005cnegthinspace" class="anchor"></a>
 <a name="g_t_005cthinspace-_0026-_005cnegthinspace-1" class="anchor"></a>
-<h3 class="section">19.8 <code>\thinspace</code> &amp; <code>\negthinspace</code></h3>
+<h3 class="section"><code>\thinspace</code> &amp; <code>\negthinspace</code></h3>
 
 <a name="index-_005cthinspace-1" class="anchor"></a>
 <a name="index-_005cnegthinspace-1" class="anchor"></a>
@@ -631,7 +633,7 @@ use is between initials, as in <code>D.\thinspace E.\ Knuth</code>.
 <hr>
 <a name="g_t_005c_002f" class="anchor"></a>
 <a name="g_t_005c_002f-1" class="anchor"></a>
-<h3 class="section">19.9 <code>\/</code></h3>
+<h3 class="section"><code>\/</code></h3>
 
 <a name="index-_005c_002f" class="anchor"></a>
 <a name="index-italic-correction" class="anchor"></a>
@@ -676,7 +678,7 @@ in a different way.
 <hr>
 <a name="g_t_005chrulefill-_0026-_005cdotfill" class="anchor"></a>
 <a name="g_t_005chrulefill-_0026-_005cdotfill-1" class="anchor"></a>
-<h3 class="section">19.10 <code>\hrulefill</code> &amp; <code>\dotfill</code></h3>
+<h3 class="section"><code>\hrulefill</code> &amp; <code>\dotfill</code></h3>
 
 <a name="index-_005chrulefill" class="anchor"></a>
 <a name="index-_005cdotfill" class="anchor"></a>
@@ -743,7 +745,7 @@ Similarly, adjust the dot spacing as with
 <hr>
 <a name="g_t_005cbigskip-_0026-_005cmedskip-_0026-_005csmallskip" class="anchor"></a>
 <a name="g_t_005cbigskip-_0026-_005cmedskip-_0026-_005csmallskip-1" class="anchor"></a>
-<h3 class="section">19.11 <code>\bigskip</code> &amp; <code>\medskip</code> &amp; <code>\smallskip</code></h3>
+<h3 class="section"><code>\bigskip</code> &amp; <code>\medskip</code> &amp; <code>\smallskip</code></h3>
 
 <p>Synopsis, one of:
 </p>
@@ -815,7 +817,7 @@ put a page break (see <a href="#g_t_005cbigbreak-_0026-_005cmedbreak-_0026-_005c
 <hr>
 <a name="g_t_005cbigbreak-_0026-_005cmedbreak-_0026-_005csmallbreak" class="anchor"></a>
 <a name="g_t_005cbigbreak-_0026-_005cmedbreak-_0026-_005csmallbreak-1" class="anchor"></a>
-<h3 class="section">19.12 <code>\bigbreak</code> &amp; <code>\medbreak</code> &amp; <code>\smallbreak</code></h3>
+<h3 class="section"><code>\bigbreak</code> &amp; <code>\medbreak</code> &amp; <code>\smallbreak</code></h3>
 
 <p>Synopsis, one of:
 </p>
@@ -849,7 +851,7 @@ with &lsquo;<samp>def</samp>&rsquo;.
 <hr>
 <a name="g_t_005cstrut" class="anchor"></a>
 <a name="g_t_005cstrut-1" class="anchor"></a>
-<h3 class="section">19.13 <code>\strut</code></h3>
+<h3 class="section"><code>\strut</code></h3>
 
 <a name="index-_005cstrut" class="anchor"></a>
 <a name="index-strut" class="anchor"></a>
@@ -953,7 +955,7 @@ integral would still hit the line.)
 <hr>
 <a name="g_t_005cvspace" class="anchor"></a>
 <a name="g_t_005cvspace-1" class="anchor"></a>
-<h3 class="section">19.14 <code>\vspace</code></h3>
+<h3 class="section"><code>\vspace</code></h3>
 
 <a name="index-_005cvspace" class="anchor"></a>
 <a name="index-vertical-space" class="anchor"></a>
@@ -1019,7 +1021,7 @@ the page, with at least one inch of space below each.
 <hr>
 <a name="g_t_005cvfill" class="anchor"></a>
 <a name="g_t_005cvfill-1" class="anchor"></a>
-<h3 class="section">19.15 <code>\vfill</code></h3>
+<h3 class="section"><code>\vfill</code></h3>
 
 <a name="index-_005cvfill" class="anchor"></a>
 
@@ -1061,7 +1063,7 @@ Lost Dog!
 <hr>
 <a name="g_t_005caddvspace" class="anchor"></a>
 <a name="g_t_005caddvspace-1" class="anchor"></a>
-<h3 class="section">19.16 <code>\addvspace</code></h3>
+<h3 class="section"><code>\addvspace</code></h3>
 
 <a name="index-_005caddvspace" class="anchor"></a>
 <a name="index-vertical-space-1" class="anchor"></a>
