--- a/data/resources/help/latex2e_2.html
+++ b/data/resources/help/latex2e_2.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Overview" class="anchor"></a>
 <a name="Overview-of-LaTeX" class="anchor"></a>
-<h2 class="chapter">2 Overview of LaTeX</h2>
+<h2 class="chapter">Overview of LaTeX</h2>
 
 <a name="index-overview-of-LaTeX" class="anchor"></a>
 <a name="index-basics-of-LaTeX" class="anchor"></a>
@@ -126,7 +128,7 @@ sensible, such as in plain text, write it as &lsquo;<samp>LaTeX</samp>&rsquo;.
 <hr>
 <a name="Starting-and-ending" class="anchor"></a>
 <a name="Starting-and-ending-1" class="anchor"></a>
-<h3 class="section">2.1 Starting and ending</h3>
+<h3 class="section">Starting and ending</h3>
 
 <a name="Starting-_0026-ending" class="anchor"></a><a name="index-starting-and-ending" class="anchor"></a>
 <a name="index-ending-and-starting" class="anchor"></a>
@@ -171,7 +173,7 @@ a LaTeX input file.
 <hr>
 <a name="Output-files" class="anchor"></a>
 <a name="Output-files-1" class="anchor"></a>
-<h3 class="section">2.2 Output files</h3>
+<h3 class="section">Output files</h3>
 
 <p>LaTeX produces a main output file and at least two auxiliary files.
 The main output file&rsquo;s name ends in either <samp>.dvi</samp> or <samp>.pdf</samp>.
@@ -255,7 +257,7 @@ open-ended.
 <hr>
 <a name="TeX-engines" class="anchor"></a>
 <a name="TeX-engines-1" class="anchor"></a>
-<h3 class="section">2.3 TeX engines</h3>
+<h3 class="section">TeX engines</h3>
 
 <a name="index-engines_002c-TeX" class="anchor"></a>
 <a name="index-implementations-of-TeX" class="anchor"></a>
@@ -333,7 +335,7 @@ additional support for Japanese and other languages ([u]pTeX,
 <hr>
 <a name="LaTeX-command-syntax" class="anchor"></a>
 <a name="LaTeX-command-syntax-1" class="anchor"></a>
-<h3 class="section">2.4 LaTeX command syntax</h3>
+<h3 class="section">LaTeX command syntax</h3>
 
 <a name="index-command-syntax" class="anchor"></a>
 <a name="index-_005c-character-starting-commands" class="anchor"></a>
@@ -379,7 +381,7 @@ commands it covers (barring unintentional omissions, a.k.a. bugs).
 <hr>
 <a name="Environment" class="anchor"></a>
 <a name="Environment-1" class="anchor"></a>
-<h3 class="section">2.5 Environment</h3>
+<h3 class="section">Environment</h3>
 
 <p>Synopsis:
 </p>
@@ -424,7 +426,7 @@ required (it specifies the formatting of columns).
 <hr>
 <a name="CTAN" class="anchor"></a>
 <a name="CTAN_003a-the-Comprehensive-TeX-Archive-Network" class="anchor"></a>
-<h3 class="section">2.6 CTAN: the Comprehensive TeX Archive Network</h3>
+<h3 class="section">CTAN: the Comprehensive TeX Archive Network</h3>
 
 <a name="index-CTAN" class="anchor"></a>
 
