--- a/data/resources/help/latex2e_20.html
+++ b/data/resources/help/latex2e_20.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Boxes" class="anchor"></a>
 <a name="Boxes-1" class="anchor"></a>
-<h2 class="chapter">20 Boxes</h2>
+<h2 class="chapter">Boxes</h2>
 
 <a name="index-boxes" class="anchor"></a>
 
@@ -103,7 +105,7 @@ One useful adjunct to the commands here is <samp>adjustbox</samp>.
 <hr>
 <a name="g_t_005cmbox-_0026-_005cmakebox" class="anchor"></a>
 <a name="g_t_005cmbox-_0026-_005cmakebox-1" class="anchor"></a>
-<h3 class="section">20.1 <code>\mbox</code> &amp; <code>\makebox</code></h3>
+<h3 class="section"><code>\mbox</code> &amp; <code>\makebox</code></h3>
 
 <a name="index-_005cmbox" class="anchor"></a>
 <a name="index-_005cmakebox" class="anchor"></a>
@@ -226,7 +228,7 @@ multiple lines see&nbsp;<a href="#g_t_005cparbox">\parbox</a> and&nbsp;<a href="
 <hr>
 <a name="g_t_005cfbox-_0026-_005cframebox" class="anchor"></a>
 <a name="g_t_005cfbox-_0026-_005cframebox-1" class="anchor"></a>
-<h3 class="section">20.2 <code>\fbox</code> &amp; <code>\framebox</code></h3>
+<h3 class="section"><code>\fbox</code> &amp; <code>\framebox</code></h3>
 
 <a name="index-_005cfbox" class="anchor"></a>
 <a name="index-_005cframebox-1" class="anchor"></a>
@@ -324,7 +326,7 @@ units depend on <code>picture</code>&rsquo;s <code>\unitlength</code> (see <a hr
 <hr>
 <a name="g_t_005cparbox" class="anchor"></a>
 <a name="g_t_005cparbox-1" class="anchor"></a>
-<h3 class="section">20.3 <code>\parbox</code></h3>
+<h3 class="section"><code>\parbox</code></h3>
 
 <a name="index-_005cparbox" class="anchor"></a>
 <a name="index-paragraph-mode-1" class="anchor"></a>
@@ -389,7 +391,7 @@ stretchable space).
 <hr>
 <a name="g_t_005craisebox" class="anchor"></a>
 <a name="g_t_005craisebox-1" class="anchor"></a>
-<h3 class="section">20.4 <code>\raisebox</code></h3>
+<h3 class="section"><code>\raisebox</code></h3>
 
 <a name="index-_005craisebox" class="anchor"></a>
 
@@ -448,7 +450,7 @@ second is the height of <samp>meta.png</samp>.
 <hr>
 <a name="g_t_005csbox-_0026-_005csavebox" class="anchor"></a>
 <a name="g_t_005csbox-_0026-_005csavebox-1" class="anchor"></a>
-<h3 class="section">20.5 <code>\sbox</code> &amp; <code>\savebox</code></h3>
+<h3 class="section"><code>\sbox</code> &amp; <code>\savebox</code></h3>
 
 <a name="index-_005csbox" class="anchor"></a>
 <a name="index-_005csavebox" class="anchor"></a>
@@ -544,7 +546,7 @@ header.  LaTeX only typesets it once.
 <hr>
 <a name="lrbox" class="anchor"></a>
 <a name="lrbox-1" class="anchor"></a>
-<h3 class="section">20.6 <code>lrbox</code></h3>
+<h3 class="section"><code>lrbox</code></h3>
 
 <a name="index-lrbox" class="anchor"></a>
 
@@ -581,7 +583,7 @@ and <code>\savebox</code> commands, and is equivalent to them. See <a href="#g_t
 <hr>
 <a name="g_t_005cusebox" class="anchor"></a>
 <a name="g_t_005cusebox-1" class="anchor"></a>
-<h3 class="section">20.7 <code>\usebox</code></h3>
+<h3 class="section"><code>\usebox</code></h3>
 
 <a name="index-_005cusebox" class="anchor"></a>
 <a name="index-box_002c-use-saved-box" class="anchor"></a>
