--- a/data/resources/help/latex2e_22.html
+++ b/data/resources/help/latex2e_22.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Graphics" class="anchor"></a>
 <a name="Graphics-1" class="anchor"></a>
-<h2 class="chapter">22 Graphics</h2>
+<h2 class="chapter">Graphics</h2>
 
 <a name="index-graphics" class="anchor"></a>
 <a name="index-graphics-package" class="anchor"></a>
@@ -135,7 +137,7 @@ see their documentation on CTAN.
 <hr>
 <a name="Graphics-package-options" class="anchor"></a>
 <a name="graphics-package-options" class="anchor"></a>
-<h3 class="section">22.1 <code>graphics</code> package options</h3>
+<h3 class="section"><code>graphics</code> package options</h3>
 
 <a name="index-graphics-package-options" class="anchor"></a>
 <a name="index-options_002c-graphics-package" class="anchor"></a>
@@ -220,7 +222,7 @@ option has LaTeX to read the size from the latter.
 <hr>
 <a name="Graphics-package-configuration" class="anchor"></a>
 <a name="graphics-package-configuration" class="anchor"></a>
-<h3 class="section">22.2 <code>graphics</code> package configuration</h3>
+<h3 class="section"><code>graphics</code> package configuration</h3>
 
 <a name="index-graphics-1" class="anchor"></a>
 <a name="index-graphics-package-1" class="anchor"></a>
@@ -245,7 +247,7 @@ TeX distribution&rsquo;s documentation.
 <hr>
 <a name="g_t_005cgraphicspath" class="anchor"></a>
 <a name="g_t_005cgraphicspath-1" class="anchor"></a>
-<h4 class="subsection">22.2.1 <code>\graphicspath</code></h4>
+<h4 class="subsection"><code>\graphicspath</code></h4>
 
 <a name="index-_005cgraphicspath" class="anchor"></a>
 
@@ -322,7 +324,7 @@ instead in <samp>book/plots</samp>.
 <hr>
 <a name="g_t_005cDeclareGraphicsExtensions" class="anchor"></a>
 <a name="g_t_005cDeclareGraphicsExtensions-1" class="anchor"></a>
-<h4 class="subsection">22.2.2 <code>\DeclareGraphicsExtensions</code></h4>
+<h4 class="subsection"><code>\DeclareGraphicsExtensions</code></h4>
 
 <a name="index-_005cDeclareGraphicsExtensions" class="anchor"></a>
 
@@ -374,7 +376,7 @@ than once.  Show its value with
 <hr>
 <a name="g_t_005cDeclareGraphicsRule" class="anchor"></a>
 <a name="g_t_005cDeclareGraphicsRule-1" class="anchor"></a>
-<h4 class="subsection">22.2.3 <code>\DeclareGraphicsRule</code></h4>
+<h4 class="subsection"><code>\DeclareGraphicsRule</code></h4>
 
 <a name="index-_005cDeclareGraphicsRule" class="anchor"></a>
 
@@ -463,7 +465,7 @@ See the documentation for your TeX distribution.
 <hr>
 <a name="Commands-for-graphics" class="anchor"></a>
 <a name="Commands-for-graphics-1" class="anchor"></a>
-<h3 class="section">22.3 Commands for graphics</h3>
+<h3 class="section">Commands for graphics</h3>
 
 <a name="index-graphics-package-commands" class="anchor"></a>
 <a name="index-commands_002c-graphics-package" class="anchor"></a>
@@ -476,7 +478,7 @@ See the documentation for your TeX distribution.
 <hr>
 <a name="g_t_005cincludegraphics" class="anchor"></a>
 <a name="g_t_005cincludegraphics-1" class="anchor"></a>
-<h4 class="subsection">22.3.1 <code>\includegraphics</code></h4>
+<h4 class="subsection"><code>\includegraphics</code></h4>
 
 <a name="index-graphics-2" class="anchor"></a>
 <a name="index-graphics-package-2" class="anchor"></a>
@@ -870,7 +872,7 @@ external commands.
 <hr>
 <a name="g_t_005crotatebox" class="anchor"></a>
 <a name="g_t_005crotatebox-1" class="anchor"></a>
-<h4 class="subsection">22.3.2 <code>\rotatebox</code></h4>
+<h4 class="subsection"><code>\rotatebox</code></h4>
 
 <a name="index-rotation" class="anchor"></a>
 <a name="index-rotating-graphics" class="anchor"></a>
@@ -964,7 +966,7 @@ setting <code>units=6.283185</code> changes to radians counterclockwise.
 <hr>
 <a name="g_t_005cscalebox" class="anchor"></a>
 <a name="g_t_005cscalebox-1" class="anchor"></a>
-<h4 class="subsection">22.3.3 <code>\scalebox</code></h4>
+<h4 class="subsection"><code>\scalebox</code></h4>
 
 <a name="index-graphics_002c-scaling" class="anchor"></a>
 <a name="index-graphics_002c-resizing" class="anchor"></a>
@@ -1014,7 +1016,7 @@ immediately followed by its mirror reflection.
 <hr>
 <a name="g_t_005cresizebox" class="anchor"></a>
 <a name="g_t_005cresizebox-1" class="anchor"></a>
-<h4 class="subsection">22.3.4 <code>\resizebox</code></h4>
+<h4 class="subsection"><code>\resizebox</code></h4>
 
 <a name="index-graphics_002c-scaling-1" class="anchor"></a>
 <a name="index-graphics_002c-resizing-1" class="anchor"></a>
