--- a/data/resources/help/latex2e_26.html
+++ b/data/resources/help/latex2e_26.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Letters" class="anchor"></a>
 <a name="Letters-1" class="anchor"></a>
-<h2 class="chapter">26 Letters</h2>
+<h2 class="chapter">Letters</h2>
 
 <a name="index-letters_002c-writing" class="anchor"></a>
 <a name="index-writing-letters" class="anchor"></a>
@@ -182,7 +184,7 @@ I am not interested in entering a business arrangement with you.
 <hr>
 <a name="g_t_005caddress" class="anchor"></a>
 <a name="g_t_005caddress-1" class="anchor"></a>
-<h3 class="section">26.1 <code>\address</code></h3>
+<h3 class="section"><code>\address</code></h3>
 
 <a name="index-_005caddress" class="anchor"></a>
 
@@ -216,7 +218,7 @@ is formatted as a personal letter.
 <hr>
 <a name="g_t_005ccc" class="anchor"></a>
 <a name="g_t_005ccc-1" class="anchor"></a>
-<h3 class="section">26.2 <code>\cc</code></h3>
+<h3 class="section"><code>\cc</code></h3>
 
 <a name="index-_005ccc" class="anchor"></a>
 <a name="index-cc-list_002c-in-letters" class="anchor"></a>
@@ -242,7 +244,7 @@ with a double backslash, <code>\\</code>, as in:
 <hr>
 <a name="g_t_005cclosing" class="anchor"></a>
 <a name="g_t_005cclosing-1" class="anchor"></a>
-<h3 class="section">26.3 <code>\closing</code></h3>
+<h3 class="section"><code>\closing</code></h3>
 
 <a name="index-_005cclosing" class="anchor"></a>
 <a name="index-letters_002c-ending" class="anchor"></a>
@@ -265,7 +267,7 @@ at the end of a letter, above a handwritten signature.  For example:
 <hr>
 <a name="g_t_005cencl" class="anchor"></a>
 <a name="g_t_005cencl-1" class="anchor"></a>
-<h3 class="section">26.4 <code>\encl</code></h3>
+<h3 class="section"><code>\encl</code></h3>
 
 <a name="index-_005cencl" class="anchor"></a>
 <a name="index-enclosure-list" class="anchor"></a>
@@ -290,7 +292,7 @@ Separate multiple lines with a double backslash, <code>\\</code>.
 <hr>
 <a name="g_t_005clocation" class="anchor"></a>
 <a name="g_t_005clocation-1" class="anchor"></a>
-<h3 class="section">26.5 <code>\location</code></h3>
+<h3 class="section"><code>\location</code></h3>
 
 <a name="index-_005clocation" class="anchor"></a>
 
@@ -307,7 +309,7 @@ appears if the page style is <code>firstpage</code>.
 <hr>
 <a name="g_t_005cmakelabels" class="anchor"></a>
 <a name="g_t_005cmakelabels-1" class="anchor"></a>
-<h3 class="section">26.6 <code>\makelabels</code></h3>
+<h3 class="section"><code>\makelabels</code></h3>
 
 <a name="index-_005cmakelabels" class="anchor"></a>
 
@@ -377,7 +379,7 @@ are all that you need to print envelopes.
 <hr>
 <a name="g_t_005cname" class="anchor"></a>
 <a name="g_t_005cname-1" class="anchor"></a>
-<h3 class="section">26.7 <code>\name</code></h3>
+<h3 class="section"><code>\name</code></h3>
 
 <a name="index-_005cname" class="anchor"></a>
 
@@ -394,7 +396,7 @@ with the return address.
 <hr>
 <a name="g_t_005copening" class="anchor"></a>
 <a name="g_t_005copening-1" class="anchor"></a>
-<h3 class="section">26.8 <code>\opening</code></h3>
+<h3 class="section"><code>\opening</code></h3>
 
 <a name="index-_005copening" class="anchor"></a>
 <a name="index-letters_002c-starting" class="anchor"></a>
@@ -416,7 +418,7 @@ with the return address.
 <hr>
 <a name="g_t_005cps" class="anchor"></a>
 <a name="g_t_005cps-1" class="anchor"></a>
-<h3 class="section">26.9 <code>\ps</code></h3>
+<h3 class="section"><code>\ps</code></h3>
 <a name="index-_005cps" class="anchor"></a>
 <a name="index-postscript_002c-in-letters" class="anchor"></a>
 
@@ -437,7 +439,7 @@ with the return address.
 <hr>
 <a name="g_t_005csignature" class="anchor"></a>
 <a name="g_t_005csignature-1" class="anchor"></a>
-<h3 class="section">26.10 <code>\signature</code></h3>
+<h3 class="section"><code>\signature</code></h3>
 
 <p>Synopsis:
 </p>
@@ -488,7 +490,7 @@ the document.  To have it apply to one letter only, put it inside a
 <hr>
 <a name="g_t_005ctelephone" class="anchor"></a>
 <a name="g_t_005ctelephone-1" class="anchor"></a>
-<h3 class="section">26.11 <code>\telephone</code></h3>
+<h3 class="section"><code>\telephone</code></h3>
 
 <a name="index-_005ctelephone" class="anchor"></a>
 
