--- a/data/resources/help/latex2e_27.html
+++ b/data/resources/help/latex2e_27.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Terminal-input_002foutput" class="anchor"></a>
 <a name="Terminal-input_002foutput-1" class="anchor"></a>
-<h2 class="chapter">27 Terminal input/output</h2>
+<h2 class="chapter">Terminal input/output</h2>
 
 <a name="index-input_002foutput_002c-to-terminal" class="anchor"></a>
 <a name="index-terminal-input_002foutput" class="anchor"></a>
@@ -98,7 +100,7 @@ ul.no-bullet {list-style: none}
 <hr>
 <a name="g_t_005ctypein" class="anchor"></a>
 <a name="g_t_005ctypein-1" class="anchor"></a>
-<h3 class="section">27.1 <code>\typein</code></h3>
+<h3 class="section"><code>\typein</code></h3>
 
 <a name="index-_005ctypein" class="anchor"></a>
 
@@ -158,7 +160,7 @@ Recommendation for John Dee.
 <hr>
 <a name="g_t_005ctypeout" class="anchor"></a>
 <a name="g_t_005ctypeout-1" class="anchor"></a>
-<h3 class="section">27.2 <code>\typeout</code></h3>
+<h3 class="section"><code>\typeout</code></h3>
 
 <a name="index-_005ctypeout" class="anchor"></a>
 
