--- a/data/resources/help/latex2e_3.html
+++ b/data/resources/help/latex2e_3.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Document-classes" class="anchor"></a>
 <a name="Document-classes-1" class="anchor"></a>
-<h2 class="chapter">3 Document classes</h2>
+<h2 class="chapter">Document classes</h2>
 
 <a name="index-document-classes" class="anchor"></a>
 <a name="index-classes-of-documents" class="anchor"></a>
@@ -145,7 +147,7 @@ such as technical reports or theses, which may contain several chapters.
 <hr>
 <a name="Document-class-options" class="anchor"></a>
 <a name="Document-class-options-1" class="anchor"></a>
-<h3 class="section">3.1 Document class options</h3>
+<h3 class="section">Document class options</h3>
 
 <a name="index-document-class-options" class="anchor"></a>
 <a name="index-options_002c-document-class" class="anchor"></a>
@@ -320,7 +322,7 @@ the time at the bottom of each note.
 <hr>
 <a name="Additional-packages" class="anchor"></a>
 <a name="Additional-packages-1" class="anchor"></a>
-<h3 class="section">3.2 Additional packages</h3>
+<h3 class="section">Additional packages</h3>
 
 <a name="index-loading-additional-packages" class="anchor"></a>
 <a name="index-packages_002c-loading-additional" class="anchor"></a>
@@ -347,7 +349,7 @@ to the selected document class are passed on to the packages loaded with
 <hr>
 <a name="Class-and-package-construction" class="anchor"></a>
 <a name="Class-and-package-construction-1" class="anchor"></a>
-<h3 class="section">3.3 Class and package construction</h3>
+<h3 class="section">Class and package construction</h3>
 
 <a name="index-document-class-commands" class="anchor"></a>
 <a name="index-commands_002c-document-class" class="anchor"></a>
@@ -383,7 +385,7 @@ others. For instance, the class <code>smcmemo</code> might have commands
 <hr>
 <a name="Class-and-package-structure" class="anchor"></a>
 <a name="Class-and-package-structure-1" class="anchor"></a>
-<h4 class="subsection">3.3.1 Class and package structure</h4>
+<h4 class="subsection">Class and package structure</h4>
 
 <a name="index-class-and-package-structure" class="anchor"></a>
 <a name="index-class-file-layout" class="anchor"></a>
@@ -447,7 +449,7 @@ of the descriptions here derive from this document), or the tutorial
 <hr>
 <a name="Class-and-package-commands" class="anchor"></a>
 <a name="Class-and-package-commands-1" class="anchor"></a>
-<h4 class="subsection">3.3.2 Class and package commands</h4>
+<h4 class="subsection">Class and package commands</h4>
 <a name="index-class-and-package-commands" class="anchor"></a>
 <a name="index-commands_002c-class-and-package" class="anchor"></a>
 
