--- a/data/resources/help/latex2e_4.html
+++ b/data/resources/help/latex2e_4.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Fonts" class="anchor"></a>
 <a name="Fonts-1" class="anchor"></a>
-<h2 class="chapter">4 Fonts</h2>
+<h2 class="chapter">Fonts</h2>
 <a name="Typefaces" class="anchor"></a>
 <a name="index-typefaces" class="anchor"></a>
 <a name="index-fonts" class="anchor"></a>
@@ -101,7 +103,7 @@ and a style.  The LaTeX commands for doing this are described here.
 <hr>
 <a name="Font-styles" class="anchor"></a>
 <a name="Font-styles-1" class="anchor"></a>
-<h3 class="section">4.1 Font styles</h3>
+<h3 class="section">Font styles</h3>
 
 <a name="index-font-styles" class="anchor"></a>
 <a name="index-type-styles" class="anchor"></a>
@@ -352,7 +354,7 @@ are provided to make them the default.  FAQ entry:
 <hr>
 <a name="Font-sizes" class="anchor"></a>
 <a name="Font-sizes-1" class="anchor"></a>
-<h3 class="section">4.2 Font sizes</h3>
+<h3 class="section">Font sizes</h3>
 
 <a name="index-font-sizes" class="anchor"></a>
 <a name="index-typeface-sizes" class="anchor"></a>
@@ -408,7 +410,7 @@ for instance, <code>\begin{tiny}...\end{tiny}</code>.
 <hr>
 <a name="Low_002dlevel-font-commands" class="anchor"></a>
 <a name="Low_002dlevel-font-commands-1" class="anchor"></a>
-<h3 class="section">4.3 Low-level font commands</h3>
+<h3 class="section">Low-level font commands</h3>
 
 <a name="index-low_002dlevel-font-commands" class="anchor"></a>
 <a name="index-font-commands_002c-low_002dlevel" class="anchor"></a>
