--- a/data/resources/help/latex2e_9.html
+++ b/data/resources/help/latex2e_9.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Line-breaking" class="anchor"></a>
 <a name="Line-breaking-1" class="anchor"></a>
-<h2 class="chapter">9 Line breaking</h2>
+<h2 class="chapter">Line breaking</h2>
 
 <a name="index-line-breaking" class="anchor"></a>
 <a name="index-breaking-lines" class="anchor"></a>
@@ -112,7 +114,7 @@ fiddling with breaks that will change anyway.
 <hr>
 <a name="g_t_005c_005c" class="anchor"></a>
 <a name="g_t_005c_005c-1" class="anchor"></a>
-<h3 class="section">9.1 <code>\\</code></h3>
+<h3 class="section"><code>\\</code></h3>
 
 <a name="index-_005c_005c-force-line-break" class="anchor"></a>
 <a name="index-new-line_002c-starting" class="anchor"></a>
@@ -194,7 +196,7 @@ something like this.
 <hr>
 <a name="g_t_005cobeycr-_0026-_005crestorecr" class="anchor"></a>
 <a name="g_t_005cobeycr-_0026-_005crestorecr-1" class="anchor"></a>
-<h3 class="section">9.2 <code>\obeycr</code> &amp; <code>\restorecr</code></h3>
+<h3 class="section"><code>\obeycr</code> &amp; <code>\restorecr</code></h3>
 
 <a name="index-_005cobeycr" class="anchor"></a>
 <a name="index-_005crestorecr" class="anchor"></a>
@@ -245,7 +247,7 @@ fff ggg
 <hr>
 <a name="g_t_005cnewline" class="anchor"></a>
 <a name="g_t_005cnewline-1" class="anchor"></a>
-<h3 class="section">9.3 <code>\newline</code></h3>
+<h3 class="section"><code>\newline</code></h3>
 
 <a name="index-_005cnewline" class="anchor"></a>
 <a name="index-new-line_002c-starting-_0028paragraph-mode_0029" class="anchor"></a>
@@ -278,7 +280,7 @@ single cell of the table.
 <hr>
 <a name="g_t_005c_002d-_0028hyphenation_0029" class="anchor"></a>
 <a name="g_t_005c_002d-_0028discretionary-hyphen_0029" class="anchor"></a>
-<h3 class="section">9.4 <code>\-</code> (discretionary hyphen)</h3>
+<h3 class="section"><code>\-</code> (discretionary hyphen)</h3>
 
 <a name="index-_005c_002d-_0028hyphenation_0029" class="anchor"></a>
 <a name="index-hyphenation_002c-forcing" class="anchor"></a>
@@ -321,7 +323,7 @@ care.
 <hr>
 <a name="g_t_005cdiscretionary" class="anchor"></a>
 <a name="g_t_005cdiscretionary-_0028generalized-hyphenation-point_0029" class="anchor"></a>
-<h3 class="section">9.5 <code>\discretionary</code> (generalized hyphenation point)</h3>
+<h3 class="section"><code>\discretionary</code> (generalized hyphenation point)</h3>
 <a name="index-hyphenation_002c-discretionary" class="anchor"></a>
 <a name="index-discretionary-hyphenation" class="anchor"></a>
 
@@ -353,7 +355,7 @@ automatically by TeX&rsquo;s hyphenation algorithm.
 <hr>
 <a name="g_t_005cfussy-_0026-_005csloppy" class="anchor"></a>
 <a name="g_t_005cfussy-_0026-_005csloppy-1" class="anchor"></a>
-<h3 class="section">9.6 <code>\fussy</code> &amp; <code>\sloppy</code></h3>
+<h3 class="section"><code>\fussy</code> &amp; <code>\sloppy</code></h3>
 
 <a name="index-_005cfussy" class="anchor"></a>
 <a name="index-_005csloppy" class="anchor"></a>
@@ -376,7 +378,7 @@ the command.
 <hr>
 <a name="sloppypar" class="anchor"></a>
 <a name="sloppypar-1" class="anchor"></a>
-<h4 class="subsection">9.6.1 <code>sloppypar</code></h4>
+<h4 class="subsection"><code>sloppypar</code></h4>
 
 <a name="index-sloppypar" class="anchor"></a>
 <a name="index-sloppypar-environment" class="anchor"></a>
@@ -413,7 +415,7 @@ the command.
 <hr>
 <a name="g_t_005chyphenation" class="anchor"></a>
 <a name="g_t_005chyphenation-1" class="anchor"></a>
-<h3 class="section">9.7 <code>\hyphenation</code></h3>
+<h3 class="section"><code>\hyphenation</code></h3>
 
 <a name="index-_005chyphenation" class="anchor"></a>
 <a name="index-hyphenation_002c-defining" class="anchor"></a>
@@ -441,7 +443,7 @@ exactly.  Multiple <code>\hyphenation</code> commands accumulate.
 <hr>
 <a name="g_t_005clinebreak-_0026-_005cnolinebreak" class="anchor"></a>
 <a name="g_t_005clinebreak-_0026-_005cnolinebreak-1" class="anchor"></a>
-<h3 class="section">9.8 <code>\linebreak</code> &amp; <code>\nolinebreak</code></h3>
+<h3 class="section"><code>\linebreak</code> &amp; <code>\nolinebreak</code></h3>
 
 <a name="index-_005clinebreak" class="anchor"></a>
 <a name="index-_005cnolinebreak" class="anchor"></a>
