--- a/data/resources/help/latex2e_10.html
+++ b/data/resources/help/latex2e_10.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Page-breaking" class="anchor"></a>
 <a name="Page-breaking-1" class="anchor"></a>
-<h2 class="chapter">10 Page breaking</h2>
+<h2 class="chapter">Page breaking</h2>
 
 <a name="index-page-breaking" class="anchor"></a>
 <a name="index-breaking-pages" class="anchor"></a>
@@ -127,7 +129,7 @@ influence page breaks while preparing a final version of a document.
 <hr>
 <a name="g_t_005cclearpage-_0026-_005ccleardoublepage" class="anchor"></a>
 <a name="g_t_005cclearpage-_0026-_005ccleardoublepage-1" class="anchor"></a>
-<h3 class="section">10.1 <code>\clearpage</code> &amp; <code>\cleardoublepage</code></h3>
+<h3 class="section"><code>\clearpage</code> &amp; <code>\cleardoublepage</code></h3>
 
 <a name="index-_005cclearpage" class="anchor"></a>
 <a name="index-flushing-floats-and-starting-a-page" class="anchor"></a>
@@ -184,7 +186,7 @@ two-column mode then <code>\newpage</code> ends the current column while
 <hr>
 <a name="g_t_005cnewpage" class="anchor"></a>
 <a name="g_t_005cnewpage-1" class="anchor"></a>
-<h3 class="section">10.2 <code>\newpage</code></h3>
+<h3 class="section"><code>\newpage</code></h3>
 
 <a name="index-_005cnewpage" class="anchor"></a>
 <a name="index-new-page_002c-starting" class="anchor"></a>
@@ -229,7 +231,7 @@ stretch out the page, as <code>\pagebreak</code> does.
 <hr>
 <a name="g_t_005cenlargethispage" class="anchor"></a>
 <a name="g_t_005cenlargethispage-1" class="anchor"></a>
-<h3 class="section">10.3 <code>\enlargethispage</code></h3>
+<h3 class="section"><code>\enlargethispage</code></h3>
 
 <a name="index-_005cenlargethispage" class="anchor"></a>
 <a name="index-enlarge-current-page" class="anchor"></a>
@@ -264,7 +266,7 @@ explicit <code>\pagebreak</code>.
 <hr>
 <a name="g_t_005cpagebreak-_0026-_005cnopagebreak" class="anchor"></a>
 <a name="g_t_005cpagebreak-_0026-_005cnopagebreak-1" class="anchor"></a>
-<h3 class="section">10.4 <code>\pagebreak</code> &amp; <code>\nopagebreak</code></h3>
+<h3 class="section"><code>\pagebreak</code> &amp; <code>\nopagebreak</code></h3>
 
 <a name="index-_005cpagebreak" class="anchor"></a>
 <a name="index-_005cnopagebreak" class="anchor"></a>
