--- a/data/resources/help/latex2e_29.html
+++ b/data/resources/help/latex2e_29.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Document-templates" class="anchor"></a>
 <a name="Document-templates-1" class="anchor"></a>
-<h2 class="appendix">Appendix A Document templates</h2>
+<h2 class="appendix">Document templates</h2>
 
 <a name="index-document-templates" class="anchor"></a>
 <a name="index-templates_002c-document" class="anchor"></a>
@@ -102,7 +104,7 @@ be useful.  Additional template resources are listed at
 <hr>
 <a name="beamer-template" class="anchor"></a>
 <a name="beamer-template-1" class="anchor"></a>
-<h3 class="section">A.1 <code>beamer</code> template</h3>
+<h3 class="section"><code>beamer</code> template</h3>
 
 <a name="index-beamer-template-and-class" class="anchor"></a>
 <a name="index-template_002c-beamer" class="anchor"></a>
@@ -139,7 +141,7 @@ array of features, but here is a basic template:
 <hr>
 <a name="article-template" class="anchor"></a>
 <a name="article-template-1" class="anchor"></a>
-<h3 class="section">A.2 <code>article</code> template</h3>
+<h3 class="section"><code>article</code> template</h3>
 
 <a name="index-template_002c-article" class="anchor"></a>
 
@@ -164,7 +166,7 @@ Some more text.
 <hr>
 <a name="book-template" class="anchor"></a>
 <a name="book-template-1" class="anchor"></a>
-<h3 class="section">A.3 <code>book</code> template</h3>
+<h3 class="section"><code>book</code> template</h3>
 
 <a name="index-template_002c-book" class="anchor"></a>
 
@@ -191,7 +193,7 @@ The end.
 <hr>
 <a name="Larger-book-template" class="anchor"></a>
 <a name="Larger-book-template-1" class="anchor"></a>
-<h3 class="section">A.4 Larger <code>book</code> template</h3>
+<h3 class="section">Larger <code>book</code> template</h3>
 
 <a name="index-template_002c-book-1" class="anchor"></a>
 
@@ -247,7 +249,7 @@ come on a new page is brought in with <code>\input</code> instead of
 <hr>
 <a name="tugboat-template" class="anchor"></a>
 <a name="tugboat-template-1" class="anchor"></a>
-<h3 class="section">A.5 <code>tugboat</code> template</h3>
+<h3 class="section"><code>tugboat</code> template</h3>
 
 <a name="index-template_002c-TUGboat" class="anchor"></a>
 <a name="index-TUGboat-template" class="anchor"></a>
