--- a/data/resources/help/latex2e_5.html
+++ b/data/resources/help/latex2e_5.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Layout" class="anchor"></a>
 <a name="Layout-1" class="anchor"></a>
-<h2 class="chapter">5 Layout</h2>
+<h2 class="chapter">Layout</h2>
 
 <a name="index-layout-commands" class="anchor"></a>
 
@@ -99,7 +101,7 @@ ul.no-bullet {list-style: none}
 <hr>
 <a name="g_t_005conecolumn" class="anchor"></a>
 <a name="g_t_005conecolumn-1" class="anchor"></a>
-<h3 class="section">5.1 <code>\onecolumn</code></h3>
+<h3 class="section"><code>\onecolumn</code></h3>
 
 <a name="index-_005conecolumn" class="anchor"></a>
 <a name="index-one_002dcolumn-output" class="anchor"></a>
@@ -119,7 +121,7 @@ behavior (see <a href="latex2e_3.html#Document-class-options">Document class opt
 <hr>
 <a name="g_t_005ctwocolumn" class="anchor"></a>
 <a name="g_t_005ctwocolumn-1" class="anchor"></a>
-<h3 class="section">5.2 <code>\twocolumn</code></h3>
+<h3 class="section"><code>\twocolumn</code></h3>
 
 <a name="index-_005ctwocolumn" class="anchor"></a>
 <a name="index-multicolumn-text" class="anchor"></a>
@@ -270,7 +272,7 @@ Two column text here.
 <hr>
 <a name="g_t_005cflushbottom" class="anchor"></a>
 <a name="g_t_005cflushbottom-1" class="anchor"></a>
-<h3 class="section">5.3 <code>\flushbottom</code></h3>
+<h3 class="section"><code>\flushbottom</code></h3>
 
 <a name="index-_005cflushbottom" class="anchor"></a>
 
@@ -296,7 +298,7 @@ is to, in a final editing stage, adjust the height of individual pages
 <hr>
 <a name="g_t_005craggedbottom" class="anchor"></a>
 <a name="g_t_005craggedbottom-1" class="anchor"></a>
-<h3 class="section">5.4 <code>\raggedbottom</code></h3>
+<h3 class="section"><code>\raggedbottom</code></h3>
 
 <a name="index-_005craggedbottom" class="anchor"></a>
 <a name="index-stretch_002c-omitting-vertical" class="anchor"></a>
@@ -313,7 +315,7 @@ option (see <a href="latex2e_3.html#Document-class-options">Document class optio
 <hr>
 <a name="Page-layout-parameters" class="anchor"></a>
 <a name="Page-layout-parameters-1" class="anchor"></a>
-<h3 class="section">5.5 Page layout parameters</h3>
+<h3 class="section">Page layout parameters</h3>
 
 <a name="index-page-layout-parameters" class="anchor"></a>
 <a name="index-parameters_002c-page-layout" class="anchor"></a>
@@ -529,7 +531,7 @@ same as the font size, e.g., &lsquo;<samp>10pt</samp>&rsquo; at a type size of 1
 <hr>
 <a name="Floats" class="anchor"></a>
 <a name="Floats-1" class="anchor"></a>
-<h3 class="section">5.6 Floats</h3>
+<h3 class="section">Floats</h3>
 
 <p>Some typographic elements, such as figures and tables, cannot be broken
 across pages.  They must be typeset outside of the normal flow of text,
