--- a/data/resources/help/latex2e_7.html
+++ b/data/resources/help/latex2e_7.html
@@ -56,6 +56,8 @@ into another language, under the above conditions for modified versions. -->
 <!--
 body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
+a:visited {color: #00e}
+a:active {color: #000}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
@@ -88,7 +90,7 @@ ul.no-bullet {list-style: none}
 <body id="top" lang="en">
 <a name="Cross-references" class="anchor"></a>
 <a name="Cross-references-1" class="anchor"></a>
-<h2 class="chapter">7 Cross references</h2>
+<h2 class="chapter">Cross references</h2>
 
 <a name="index-cross-references" class="anchor"></a>
 
@@ -142,7 +144,7 @@ having to enter the &ldquo;Theorem.&rdquo;
 <hr>
 <a name="g_t_005clabel" class="anchor"></a>
 <a name="g_t_005clabel-1" class="anchor"></a>
-<h3 class="section">7.1 <code>\label</code></h3>
+<h3 class="section"><code>\label</code></h3>
 
 <a name="index-_005clabel" class="anchor"></a>
 
@@ -220,7 +222,7 @@ See Figure~\ref{fig:test}.
 <hr>
 <a name="g_t_005cpageref" class="anchor"></a>
 <a name="g_t_005cpageref-1" class="anchor"></a>
-<h3 class="section">7.2 <code>\pageref</code></h3>
+<h3 class="section"><code>\pageref</code></h3>
 
 <a name="index-_005cpageref" class="anchor"></a>
 <a name="index-cross-referencing-with-page-number" class="anchor"></a>
@@ -256,7 +258,7 @@ those.)
 <hr>
 <a name="g_t_005cref" class="anchor"></a>
 <a name="g_t_005cref-1" class="anchor"></a>
-<h3 class="section">7.3 <code>\ref</code></h3>
+<h3 class="section"><code>\ref</code></h3>
 
 <a name="index-_005cref" class="anchor"></a>
 <a name="index-cross-referencing_002c-symbolic" class="anchor"></a>
