--- a/data/resources/help/latex2e_30.html
+++ b/data/resources/help/latex2e_30.html
@@ -57,6 +57,7 @@ body {margin: 1em; margin-top: 0px; padding-top: 1px}
 a.anchor {float: right}
 a:visited {color: #00e}
 a:active {color: #000}
+a.external {background: url('./images/external-link.png') no-repeat; background-position: right center; padding-right: 18px}
 a.summary-letter {text-decoration: none}
 blockquote.indentedblock {margin-right: 0em}
 blockquote.smallindentedblock {margin-right: 0em; font-size: smaller}
